Geo Api connected

--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
   <title>Document</title>
 
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  <script data-ad-client="ca-pub-1513758842983352" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
-  </script>
 
   <link rel="apple-touch-icon" sizes="180x180" href="design/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="design/favicon/favicon-32x32.png">
