--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>WEEKBIN | All news just for you</title>
 
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156644259-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-156644259-2');
+  </script>
+
+  <script data-ad-client="ca-pub-1513758842983352" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <link rel="apple-touch-icon" sizes="180x180" href="design/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="design/favicon/favicon-32x32.png">
@@ -65,8 +81,8 @@
   </div class="links">
   <div class="apis">
     <p class="api">News by <a href="https://newsapi.org/" class="api">NewsAPI</a></pclass="apis">
-    <p class="api">Weather by <a href="https://openweathermap.org/" class="api">OpenWeatherMap</a></p>
-    <p class="api">Currency rates by <a href="https://fixer.io/" class="api">Fixer</a></p>
+      <p class="api">Weather by <a href="https://openweathermap.org/" class="api">OpenWeatherMap</a></p>
+      <p class="api">Currency rates by <a href="https://fixer.io/" class="api">Fixer</a></p>
   </div>
   <script src="scripts.js"></script>
 </body style="background-color:#1c87c9;">
