--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     gtag('config', 'UA-156644259-2');
   </script>
 
-  <script data-ad-client="ca-pub-1513758842983352" async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <meta name="propeller" content="7c24ad54a384e7c735e2e1f290ab57ee">
 
   <link rel="apple-touch-icon" sizes="180x180" href="design/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="design/favicon/favicon-32x32.png">
