--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         </div>
         <div class="news2"></div>
       </div>
-      <div class="col-md-4 news1">
+      <div class="col-md-4">
+        <div class="news1"></div>
         <div id="657589856">
 
           <script type="text/javascript">
@@ -90,7 +91,7 @@
       
           </script>
       
-      </div>
+        </div>
       </div>
       <div class="col-md-3">
         <div class="body3"></div>
