--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156644259-2"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157910204-1">
+  </script>
   <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -21,7 +22,8 @@
     }
     gtag('js', new Date());
 
-    gtag('config', 'UA-156644259-2');
+    gtag('config', 'UA-157910204-1');
+  </script>
   </script>
 
   <script data-ad-client="ca-pub-1513758842983352" async
