--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <body>
-  <img class="logo" src="design/logo.png" alt="WEEKBIN">
+  <h1 class="logo">Weekbin</h1>
   <h2 class="description">AUTOMATED NEWS SERVICE</h2>
   <h3 class="beta">currently in beta <br> feed updates every ~15 minutes</h3>
   <div class="btns">
